@@ -1,3 +1,4 @@
+- add scheduler log and server console logging options; redirect output to logging routine
 - fix for enroll bug when accounts >= 10
 - get rid of DBM for scheduler
 - add STRM logging method (optional)
